# csharpify-demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  main.cpp
src/: CMakeLists.txt  Directory.Build.props  main.cpp  main.cs  main.csproj  runtimeconfig.template.json
